fix examples on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@ a.active {
       -webkit-transform: rotate(0deg); /* Safari */
       transform: rotate(0deg);
       padding: 0 5px;
+      display: inline;
     }
 
 
